# diffusion-storage-optimization

./: .gitignore  AI_FOR_BHARAT_USECASES.md  ALL_FILES_UPDATED.md  GETTING_STARTED.md  HACKATHON_SUBMISSION.md  INDEX.md  INSTALL_HARMONYOS.md  INSTALL_LINUX.md  INSTALL_OPENKYLIN.md  INSTALL_WINDOWS.md  MULTI_PLATFORM_COMPLETE.md  Makefile  PLATFORM_QUICK_REFERENCE.md  PLATFORM_SUPPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  UPDATES_SUMMARY.md  URL_UPDATE_COMPLETE.md  install.sh  install_harmonyos.sh  install_windows.ps1  presentation_outline.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_setup.py
benchmarks/: memory_benchmark.py
docs/: 01_introduction.md  02_unet_anatomy.md  03_ddim_sampling.md  04_latent_diffusion.md  05_guidance_scheduling.md  06_quantization.md  07_compression_codec.md  08_deployment.md  09_applications.md  10_recommendations.md
examples/: complete_optimization.py
notebooks/: interactive_demo.py
src/latent/: latent_analysis.py
src/nvfp4_ddim_optimizer/: README.md  __init__.py
src/nvfp4_ddim_optimizer/metrics/: __init__.py
src/nvfp4_ddim_optimizer/pipeline/: __init__.py  config.py
src/nvfp4_ddim_optimizer/quantization/: __init__.py  data_models.py
src/nvfp4_ddim_optimizer/sampling/: __init__.py  config.py
src/sampling/: ddim_demo.py
tests/: __init__.py  conftest.py
